--- a/NotariusApp/app/src/main/res/values/strings.xml
+++ b/NotariusApp/app/src/main/res/values/strings.xml
@@ -22,5 +22,5 @@
     <string name="settings">Settings</string>
     <string name="notifications">Notifications</string>
     <string name="notification_on_off">Notifications on/off</string>
-    <string name="frequency">Frequency</string>
+    <string name="frequency">Repeat</string>
 </resources>
