--- a/NotariusApp/app/src/main/res/values/strings.xml
+++ b/NotariusApp/app/src/main/res/values/strings.xml
@@ -23,4 +23,17 @@
     <string name="notifications">Notifications</string>
     <string name="notification_on_off">Notifications on/off</string>
     <string name="frequency">Repeat</string>
+
+
+    <string name="details_alarm_name">Alarm Name</string>
+    <string name="details_repeat_weekly">Repeat Weekly</string>
+    <string name="details_sunday">Sunday</string>
+    <string name="details_monday">Monday</string>
+    <string name="details_tuesday">Tuesday</string>
+    <string name="details_wednesday">Wednesday</string>
+    <string name="details_thursday">Thursday</string>
+    <string name="details_friday">Friday</string>
+    <string name="details_saturday">Saturday</string>
+    <string name="details_alarm_tone">Alarm Tone</string>
+    <string name="details_alarm_tone_default">Select an alarm tone</string>
 </resources>
