--- a/NotariusApp/app/src/main/res/values/strings.xml
+++ b/NotariusApp/app/src/main/res/values/strings.xml
@@ -22,8 +22,7 @@
     <string name="settings">Settings</string>
     <string name="notifications">Notifications</string>
     <string name="notification_on_off">Notifications on/off</string>
-    <string name="frequency">Repeat</string>
-
+    <string name="frequency">Frequency</string>
 
     <string name="details_alarm_name">Alarm Name</string>
     <string name="details_repeat_weekly">Repeat Weekly</string>
